add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/args")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/base64")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/feature")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/hash")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ioc")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/json")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/library")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/pack")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/promise")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/sqlite")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/storage")
